Added extra contact form js file
Removed from clean-blog js file the contact form code and placed into separate file to prevent issues with any other forms that could be added when customising the template.

--- a/contact.html
+++ b/contact.html
@@ -182,6 +182,9 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
 
+    <!-- Custom Theme JavaScript -->
+    <script src="js/contact-form.min.js"></script>
+
 </body>
 
 </html>
