--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Vaggie">
 
-    <title>王婕的博客｜Vaggie Blog</title>
+    <title>7dyk｜7dyk</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
