--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">Latest Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
