Copyright information change

--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Copyright &copy; U of M Libraries 2016</p>
                 </div>
             </div>
         </div>
