--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     <div class="page-heading">
                         <h1>About The Exhibit</h1>
                         <hr class="small">
-                        <span class="subheading">This is what I do.</span>
+                        <span class="subheading">Walking amoung us</span>
                     </div>
                 </div>
             </div>
