--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="site-heading">
                         <h1>Royal BC Museum Mammoth Blog</h1>
                         <hr class="small">
-                        <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                        <span class="subheading">The GIANT blog for the community</span>
                     </div>
                 </div>
             </div>
