--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
                         <a href="Index.html">Home</a>
                     </li>
                     <li>
-                        <a href="About The Exhibit.html">About</a>
+                        <a href="about.html">About The Exhibit</a>
                     </li>
                     <li>
-                        <a href="Blog Posts.html">Sample Post</a>
+                        <a href="sample posts.html">Blog Post</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
