--- a/post.html
+++ b/post.html
@@ -52,10 +52,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About The Exhibit</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">Blog Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
