--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About The Exhibit</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">Blog Post</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -76,7 +76,7 @@
                     <div class="page-heading">
                         <h1>Contact Me</h1>
                         <hr class="small">
-                        <span class="subheading">Have questions? I have answers (maybe).</span>
+                        <span class="subheading">Have questions? I have answers.</span>
                     </div>
                 </div>
             </div>
