--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('http://static1.squarespace.com/static/54b7f6fae4b09cb81d7cc473/t/5654c751e4b0a42157ccf67a/1448396635000/')">
+    <header class="intro-header" style="background-image: url('http://www.rom.on.ca/sites/default/files/imce/members/discount_royal.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
