--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('http://www.rom.on.ca/sites/default/files/imce/members/discount_royal.jpg')">
+    <header class="intro-header" style="background-image: url('http://royalbcmuseum.bc.ca/sites/default/files/styles/basic_page_feature_image/public/images/feature-images/contactus.jpg?itok=Uz-jtGLe')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
