--- a/about.html
+++ b/about.html
@@ -87,11 +87,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p> Millions of years ago, giants roamed the earth.
+                <p> Millions of years ago, giants roamed the earth.</p>
 
-June 3, 2016 - December 31, 2016
+<p>June 3, 2016 - December 31, 2016</p>
 
-Sometimes standing more than 14 feet tall, mammoths and mastodons towered over the lands of Europe, Asia and North America from as long ago as 1.8 million years in the past to as recently as 10,000 years ago, during the Ice Age. And now they're here at the Royal BC Museum. Beginning in June 2016, the Royal BC Museum presents the rare opportunity to see the larger-than-life exhibition, Mammoths! Giants of the Ice Age, in partnership with The Field Museum in Chicago. This engaging and interactive look at these magnificent creatures transports visitors to a time when giants walked among us and humans struggled to survive in a world they had yet to conquer.
+<p>Sometimes standing more than 14 feet tall, mammoths and mastodons towered over the lands of Europe, Asia and North America from as long ago as 1.8 million years in the past to as recently as 10,000 years ago, during the Ice Age. And now they're here at the Royal BC Museum. Beginning in June 2016, the Royal BC Museum presents the rare opportunity to see the larger-than-life exhibition, Mammoths! Giants of the Ice Age, in partnership with The Field Museum in Chicago. This engaging and interactive look at these magnificent creatures transports visitors to a time when giants walked among us and humans struggled to survive in a world they had yet to conquer.
 
 For the first time ever in Canada, you are able to see Lyuba, a 40,000 year-old baby woolly mammoth. Discovered in Siberia in 2007, Lyuba is the world's most complete preserved mammoth. This is a remarkable opportunity for visitors to see an animal – now extinct – that once roamed across much of BC.
 
