--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                         <a href="about.html">About The Exhibit</a>
                     </li>
                     <li>
-                        <a href="sample posts.html">Blog Post</a>
+                        <a href="sample posts.html">Community Comments</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
