--- a/post.html
+++ b/post.html
@@ -55,7 +55,7 @@
                         <a href="about.html">About The Exhibit</a>
                     </li>
                     <li>
-                        <a href="post.html">Blog Post</a>
+                        <a href="post.html">Community Comments</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
