--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('http://animalia-life.com/data_images/mammoth/mammoth4.jpg')">
+    <header class="intro-header" style="background-image: url('https://i.ytimg.com/vi/1LdHDD8e5a8/maxresdefault.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
