--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Royal BC Museum</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
