--- a/post.html
+++ b/post.html
@@ -88,15 +88,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+                    <p>The techniques used to develop the model of the mammoth were developed by Vancouver-based Topographics using such cutting-edge technology as three-dimensional scanning of the maquette into a full size animal. The form was then cut into layers by a computer.</p>
 
-                    <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
+                    <p>Richard Gibbs did the taxidermy on Woolly. His deft touch has much to do with the longevity and hyper-realism of the display.</p>
 
-                    <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
+                    <p>“We wanted a really dynamic introduction to the Natural History section, and going back to when the Strait of Juan de Fuca was actually a grassy plain and mammoths would have been very common,” said Gibbs. “The scene could be Victoria, as they are still finding tusks and more in the Butler Brothers pit in central Saanich to this day. The musk ox fur was an obvious choice as they exist in the same environment and many remains have been found along with those of mammoths.”</p>
 
-                    <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
+                    <p>Gibbs notes that hair discovered in permafrost sites obviously changes colour when it has been underground for tens of thousands of years. So the team was working on “best guess” as well as scientific research coming up with the final look of Woolly. Nine hides were needed in total and a enormous amount of labour went into getting the right texture aligned to body placement, the right nape and the right colour. </p>
 
-                    <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
+                    <p>It took a year to complete Woolly, and a great deal of maintenance goes into keeping the replica in tip-top condition as the display is exposed to the open air, dust and other deleterious influences. The size made encasing it in a glass case unwieldy, and also just didn’t seem to fit the look of the scene.</p>
 
                     <h2 class="section-heading">The Final Frontier</h2>
 
