--- a/post.html
+++ b/post.html
@@ -108,14 +108,14 @@
 
                     <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
 
-                    <h2 class="section-heading">Reaching for the Stars</h2>
+                    <h2 class="section-heading">SEE A WOOLLY MAMMOTH!</h2>
 
-                    <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
+                    <p> Watch out kids! It’s coming right for us! It was very cool to see a Woolly Mammoth the way they used to be when they roamed around Vancouver Island. We were very surprised to find real ice on one of the walls of the exhibit, we thought for sure it was fake… that is, until our 5 year old’s busy hands made contact. Just another place where the museum goes above and beyond to help the exhibits come to life.</p>
 
                     <a href="#">
                         <img class="img-responsive" src="http://i3.mirror.co.uk/incoming/article2040805.ece/ALTERNATES/s1227b/A-39000-year-old-female-Woolly-mammoth.jpg" alt="">
                     </a>
-                    <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+                    <span class="caption text-muted">Factoid Alert: The oldest and best specimen of a large-mammal fossil ever to be found on Vancouver Island was a 17,000 year old fossilized tooth of a woolly mammoth found on an island beach in the Greater Victoria area.</span>
 
                     <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
 
