--- a/post.html
+++ b/post.html
@@ -98,7 +98,7 @@
 
                     <p>It took a year to complete Woolly, and a great deal of maintenance goes into keeping the replica in tip-top condition as the display is exposed to the open air, dust and other deleterious influences. The size made encasing it in a glass case unwieldy, and also just didn’t seem to fit the look of the scene.</p>
 
-                    <h2 class="section-heading">The Final Frontier</h2>
+                    <h2 class="section-heading">Sawyer's Thoughts</h2>
 
                     <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
 
