--- a/post.html
+++ b/post.html
@@ -99,6 +99,10 @@
                     <p>It took a year to complete Woolly, and a great deal of maintenance goes into keeping the replica in tip-top condition as the display is exposed to the open air, dust and other deleterious influences. The size made encasing it in a glass case unwieldy, and also just didn’t seem to fit the look of the scene.</p>
 
                     <h2 class="section-heading">Sawyer's Thoughts</h2>
+                    
+                     <a href="#">
+                        <img class="img-responsive" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAAjAAAAJGRiNTY4YzcwLTU1ZDYtNGE3Zi05NGIyLTg5N2E1YzlhZjc3Nw.jpg" alt="">
+                    </a>
 
                     <p>Digital Anthropology Is a new field that is continually growing and shaping even as you are reading this. Within the field of Digital Archeology there is public Anthropology. This is a new way to spread the word about different anthropological and archeological sites. Public Anthropology is also a good way to get a community informed and integrated within the site itself.
                    
