--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
     </header>
     <p>The purpose of this website is for educating the differnt communitues that the Mommoth exhibit will be traelling to what to expect when the exhibit comes to them and for the people who have seen it to give feed back to what was sadisfacdory and what could be improved upon.</p>
    
+        <a href="#">
+                        <img class="img-responsive" src="http://s.ngm.com/2009/05/mammoths/img/mammoth-615.jpg" alt="">
+                    </a>    <a href="#">
+                        <img class="img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThukFd0xOIdikfHWhekBUil7HeSvL599jzKx4L52cX__okDp-F" alt="">
+                    </a>    <a href="#">
+                        <img class="img-responsive" src="https://static1.squarespace.com/static/53112110e4b06a95ceb28816/t/567c3e5f69a91a9534918d32/1450983008371/Jehovah's+Witnesses+Wooly+Mammoths" alt="">
+                    </a>
                 <hr>
                 <!-- Pager -->
                 <ul class="pager">
