--- a/about.html
+++ b/about.html
@@ -91,15 +91,15 @@
 
 <p>June 3, 2016 - December 31, 2016</p>
 
-<p>Sometimes standing more than 14 feet tall, mammoths and mastodons towered over the lands of Europe, Asia and North America from as long ago as 1.8 million years in the past to as recently as 10,000 years ago, during the Ice Age. And now they're here at the Royal BC Museum. Beginning in June 2016, the Royal BC Museum presents the rare opportunity to see the larger-than-life exhibition, Mammoths! Giants of the Ice Age, in partnership with The Field Museum in Chicago. This engaging and interactive look at these magnificent creatures transports visitors to a time when giants walked among us and humans struggled to survive in a world they had yet to conquer.</p>
+<p>Mommoths were gigantic beats that could stand at over 14 feet tall they could hae been seen up to 10,000 years ago including in North America. The Royal BC Museum is now casing the beasts. Beginning in June 2016, the Royal BC Museum has been presenting the public with the unique opportunity to see the revel that is the Mammoths! This engaging and interactive exhibit send the veiwer back to the time when these magnificant animals exsited.</p>
 
-<p>For the first time ever in Canada, you are able to see Lyuba, a 40,000 year-old baby woolly mammoth. Discovered in Siberia in 2007, Lyuba is the world's most complete preserved mammoth. This is a remarkable opportunity for visitors to see an animal – now extinct – that once roamed across much of BC.</p>
+<p>This is the first time in canada that the public is able to see Lyuba, the 40,000 year-old baby woolly mammoth. This mammoth was discovered in Siberia in 2007. This is a once in a life time oppritunity for the public and we encuage that you take it.</p>
 
-<p>Through a rich collection of fossils, casts, preserved flesh, immersive media and engaging interactives, visitors will discover the Proboscidean family tree, from woollies to mastodons to dwarves to modern-day elephants, immersed in a richly animated Ice Age panorama. Visitors can walk through the ancient landscapes where mammoths and mastodons lived and learn how today's scientists excavate and learn more about these amazing animals, their eventual extinction and whether it's possible to clone them today.</p>
+<p>Visitors can stroll through the prehistoric landscapes where mammoths once roamed. We can also learn  what happened to lead to their eventual extinction and whether it's possible to clone them today.</p>
 
-<p>Studies of ancient cave drawings give evidence of how early humans both hunted and honoured these massive creatures. And visitors have the opportunity to touch mammoth tusks and mastodon teeth, and learn about some of their fierce neighbours such as dire wolves and sabre-toothed cats.</p>
+<p>Something that is suplimentary to the mammoths is are examples of the cave drawings that people had made to praze these creatures. The people who are visiting this exhibit can also learn about some of the mammoths natural predators such as dire wolves and sabre-toothed cats.</p>
 
-<p>The exhibition opening coincides with a dramatic update to the Royal BC Museum's Natural History gallery, featuring a dynamic and fresh retelling of BC's own Ice Age history through new interactive displays. Visitors will see dramatic new evidence in the form of a radiocarbon-dated mammoth tooth from the Colwood Delta that has given the museum a completely new understanding of Vancouver Island's Ice Age.</p>
+<p>Visitors will be shocked by the stunning evidence of a radiocarbon-dated mammoth tooth from the Colwood Delta that has given victoria a new understanding of Vancouver Island's Ice Age.</p>
             </div>
         </div>
     </div>
