--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </header>
-    <p>The purpose of this website is for educating the different communitues of the Mommoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feed back to what was sadisfacdory and what could be improved upon.</p>
+    <p>The purpose of this website is for educating the different communitues of the Mammoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feed back to what was satisfactory and what could be improved upon.</p>
    
         <a href="#">
                         <img class="img-responsive" src="http://s.ngm.com/2009/05/mammoths/img/mammoth-615.jpg" alt="">
