--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             </div>
         </div>
     </header>
-    <p>The purpose of this website is for educating the different communitues of the Mammoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feed back to what was satisfactory and what could be improved upon.</p>
+    <p>The purpose of this website is for educating the different communities of the Mammoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feedback to what was satisfactory and what could be improved upon.</p>
    
         <a href="#">
                         <img class="img-responsive" src="http://s.ngm.com/2009/05/mammoths/img/mammoth-615.jpg" alt="">
                     </a>    
     
-    <p>The public can add to this page at any time by going to the contact page and writting in, I will then re-add the post to the page within 24 hours. </p>
+    <p>The public can add to this page at any time by going to the contact page and writing in, I will then add the post to the page within 24 hours. </p>
     
     <a href="#">
                         <img class="img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThukFd0xOIdikfHWhekBUil7HeSvL599jzKx4L52cX__okDp-F" alt="">
