--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </header>
-    <p>The purpose of this website is for educating the different communities of the Mammoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feedback to what was satisfactory and what could be improved upon.</p>
+    <p>The purpose of this website is for educating the people in the communities that the Mammoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feedback to what was satisfactory and what could be improved upon.</p>
    
         <a href="#">
                         <img class="img-responsive" src="http://s.ngm.com/2009/05/mammoths/img/mammoth-615.jpg" alt="">
@@ -94,7 +94,7 @@
                         <img class="img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThukFd0xOIdikfHWhekBUil7HeSvL599jzKx4L52cX__okDp-F" alt="">
                     </a>   
     
-    <p>This page will hopeflly bring differnet communities together bonding them over this masterful exhibit. With differnt people able to write in it will create a virtual community which people can join.</p>
+    <p>This page will hopeflly bring different communities together by bonding them over this masterful exhibit. With different people able to write in, it will create a virtual community which people can join.</p>
     
     <a href="#">
                         <img class="img-responsive" src="https://static1.squarespace.com/static/53112110e4b06a95ceb28816/t/567c3e5f69a91a9534918d32/1450983008371/Jehovah's+Witnesses+Wooly+Mammoths" alt="">
