--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 
 <p>June 3, 2016 - December 31, 2016</p>
 
-<p>Mommoths were gigantic beats that could stand at over 14 feet tall they could hae been seen up to 10,000 years ago including in North America. The Royal BC Museum is now casing the beasts. Beginning in June 2016, the Royal BC Museum has been presenting the public with the unique opportunity to see the revel that is the Mammoths! This engaging and interactive exhibit send the veiwer back to the time when these magnificant animals exsited.</p>
+<p>Mammoths were gigantic beasts that could stand at over 14 feet tall and could have been seen up to 10,000 years ago, even in North America. The Royal BC Museum is now casing the beasts. Beginning in June 2016, the Royal BC Museum has been presenting the public with the unique opportunity to see the revel that is the Mammoths! This engaging and interactive exhibit send the veiwer back to the time when these magnificant animals exsited.</p>
 
 <p>This is the first time in canada that the public is able to see Lyuba, the 40,000 year-old baby woolly mammoth. This mammoth was discovered in Siberia in 2007. This is a once in a life time oppritunity for the public and we encuage that you take it.</p>
 
