--- a/about.html
+++ b/about.html
@@ -91,15 +91,15 @@
 
 <p>June 3, 2016 - December 31, 2016</p>
 
-<p>Mammoths were gigantic beasts that could stand at over 14 feet tall and could have been seen up to 10,000 years ago, even in North America. The Royal BC Museum is now casing the beasts. Beginning in June 2016, the Royal BC Museum has been presenting the public with the unique opportunity to see the revel that is the Mammoths! This engaging and interactive exhibit send the veiwer back to the time when these magnificant animals exsited.</p>
+<p>Mammoths were gigantic beasts that could stand at over 14 feet tall and could have been seen up to 10,000 years ago, even in North America. The Royal BC Museum is now showcasing the beasts. Beginning in June 2016, the Royal BC Museum has been presenting the public with the unique opportunity to see the revel that is the Mammoths! This engaging and interactive exhibit sends veiwers back to the time when these magnificant animals exsited.</p>
 
-<p>This is the first time in canada that the public is able to see Lyuba, the 40,000 year-old baby woolly mammoth. This mammoth was discovered in Siberia in 2007. This is a once in a life time oppritunity for the public and we encuage that you take it.</p>
+<p>This is the first time in Canada that the public is able to see Lyuba, the 40,000 year-old baby woolly mammoth. This mammoth was discovered in Siberia in 2007. This is a once in a life time opporitunity for the public and we encourage that you take it.</p>
 
-<p>Visitors can stroll through the prehistoric landscapes where mammoths once roamed. We can also learn  what happened to lead to their eventual extinction and whether it's possible to clone them today.</p>
+<p>Visitors can stroll through the prehistoric landscapes where mammoths once roamed. We can also learn about the what events that lead to the mammoths eventual extinction and whether it's possible to clone them today.</p>
 
-<p>Something that is suplimentary to the mammoths is are examples of the cave drawings that people had made to praze these creatures. The people who are visiting this exhibit can also learn about some of the mammoths natural predators such as dire wolves and sabre-toothed cats.</p>
+<p>A cool addition to the museum is the examples of the cave drawings that people had made to praise these creatures. The people who are visiting this exhibit can also learn about some of the mammoths natural predators such as dire wolves and sabre-toothed cats.</p>
 
-<p>Visitors will be shocked by the stunning evidence of a radiocarbon-dated mammoth tooth from the Colwood Delta that has given victoria a new understanding of Vancouver Island's Ice Age.</p>
+<p>Visitors will be shocked by the stunning evidence of a radiocarbon-dated mammoth tooth from the Colwood Delta that has given Victoria a new understanding of Vancouver Island's Ice Age.</p>
             </div>
         </div>
     </div>
