--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </div>
         </div>
     </header>
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <p>The purpose of this website is for educating the people in the communities that the Mammoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feedback to what was satisfactory and what could be improved upon.</p>
    
         <a href="#">
