--- a/about.html
+++ b/about.html
@@ -49,16 +49,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="Index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="about.html">About The Exhibit</a>
                     </li>
                     <li>
-                        <a href="posts.html">Community Comments</a>
+                        <a href="post.html">Community Comments</a>
                     </li>
                     <li>
-                        <a href="Contact.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
