--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                     <li>
+                        <a href="Interesting Facts.html">Contact</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
