--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                     <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
@@ -59,6 +59,9 @@
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
+                    </li>
+                     <li>
+                        <a href="interesting.html">Interesting Facts</a>
                     </li>
                 </ul>
             </div>
