--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                      <li>
-                        <a href="Interesting Facts.html">Contact</a>
+                        <a href="interesting.html">Interesting Facts</a>
                     </li>
                 </ul>
             </div>
