--- a/post.html
+++ b/post.html
@@ -60,6 +60,9 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                     <li>
+                        <a href="interesting.html">Interesting Facts</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
