--- a/interesting.html
+++ b/interesting.html
@@ -72,7 +72,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('http://animalia-life.com/data_images/mammoth/mammoth4.jpg')">
+    <header class="intro-header" style="background-image: url('https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-14%20at%203.04.50%20PM.png?raw=true')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
