--- a/interesting.html
+++ b/interesting.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Royal BC Museum Mammoth Blog</title>
+    <title></title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -79,7 +79,7 @@
                     <div class="site-heading">
                         <h1>Royal BC Museum Mammoth Blog</h1>
                         <hr class="small">
-                        <span class="subheading">The GIANT blog for the community</span>
+                        <span class="subheading"></span>
                     </div>
                 </div>
             </div>
