--- a/interesting.html
+++ b/interesting.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>HI</title>
+    <title></title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Royal BC Museum Mammoth Blog</h1>
+                        <h1></h1>
                         <hr class="small">
                         <span class="subheading"></span>
                     </div>
