--- a/interesting.html
+++ b/interesting.html
@@ -88,7 +88,7 @@
     <p>The purpose of this website is for educating the people in the communities that the Mammoth exhibit will be travelling to what to expect when the exhibit comes to them and for the people who have seen it to give feedback to what was satisfactory and what could be improved upon.</p>
    
         <a href="#">
-                        <img class="img-responsive" src="http://s.ngm.com/2009/05/mammoths/img/mammoth-615.jpg" alt="">
+                        <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-14%20at%203.04.50%20PM.png?raw=true" alt="">
                     </a>    
     
     <p>The public can add to this page at any time by going to the contact page and writing in, I will then add the post to the page within 24 hours. </p>
