--- a/interesting.html
+++ b/interesting.html
@@ -78,11 +78,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1></h1>
-                        <span class="subheading">
-                        e
-                        e
-                        e
-                        </span>
+                        <span class="subheading"></span>
                     </div>
                 </div>
             </div>
