--- a/interesting.html
+++ b/interesting.html
@@ -94,7 +94,7 @@
     <p>The public can add to this page at any time by going to the contact page and writing in, I will then add the post to the page within 24 hours. </p>
     
     <a href="#">
-                        <img class="img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThukFd0xOIdikfHWhekBUil7HeSvL599jzKx4L52cX__okDp-F" alt="">
+                        <img class="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-14%20at%203.21.04%20PM.png?raw=true" alt="">
                     </a>   
     
     <p>This page will hopeflly bring different communities together by bonding them over this masterful exhibit. With different people able to write in, it will create a virtual community which people can join.</p>
