--- a/interesting.html
+++ b/interesting.html
@@ -100,7 +100,7 @@
     <p>This page will hopeflly bring different communities together by bonding them over this masterful exhibit. With different people able to write in, it will create a virtual community which people can join.</p>
     
     <a href="#">
-                        <img class="img-responsive" src="https://static1.squarespace.com/static/53112110e4b06a95ceb28816/t/567c3e5f69a91a9534918d32/1450983008371/Jehovah's+Witnesses+Wooly+Mammoths" alt="">
+                        <img class="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-14%20at%203.21.04%20PM.png?raw=true" alt="">
                     </a>
                 
     <p> At the current momment we are only hearing positive feedback about the exhibit.</p>
