--- a/interesting.html
+++ b/interesting.html
@@ -72,7 +72,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-14%20at%203.21.04%20PM.png?raw=true')">
+    <header class="intro-header" style="background-image: url('https://www.google.ca/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjyivKXg97PAhXCrFQKHcbOD5kQjRwIBw&url=http%3A%2F%2Fidahoptv.org%2Fsciencetrek%2Ftopics%2Fmammoth%2Ffacts.cfm&psig=AFQjCNHMA3ocFuo196XnBmZNtqW__Loq7g&ust=1476662638210866')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
