--- a/interesting.html
+++ b/interesting.html
@@ -72,7 +72,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('https://i.ytimg.com/vi/-pziElSiJgc/maxresdefault.jpg')">
+    <header class="intro-header" style="background-image: url('http://facts.co/images/InterestingFacts.png')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
