--- a/interesting.html
+++ b/interesting.html
@@ -75,6 +75,7 @@
     <header class="intro-header" Size="large" style="background-image: url('https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-14%20at%203.21.04%20PM.png?raw=true')">
         <div class="container">
           <div background-size="cover">
+           <div height="300px">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
