--- a/interesting.html
+++ b/interesting.html
@@ -90,7 +90,7 @@
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-14%20at%203.21.04%20PM.png?raw=true">
                     </a>    
      <a href="#">
-                        <img class="img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThukFd0xOIdikfHWhekBUil7HeSvL599jzKx4L52cX__okDp-F" alt="">
+                        <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-15%20at%206.12.27%20PM.png?raw=true" alt="">
                     </a>    
      <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-15%20at%206.12.46%20PM.png?raw=true" alt="">
