--- a/interesting.html
+++ b/interesting.html
@@ -90,7 +90,7 @@
                     </a>   
         <p>In the links below you can find cool new mammoth finds near you!</p>
         <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1zCNZu6r-GriIw5_kn6IvOyG7ROebA06sjZ-QgYbyqOU&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
-        <p></p>
+        <header>INTERESTING FACTS</header>
         
      <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-15%20at%206.12.27%20PM.png?raw=true" alt="">
