--- a/interesting.html
+++ b/interesting.html
@@ -103,7 +103,16 @@
         <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-16%20at%2011.04.39%20AM.png?raw=true" alt="">
                     </a> 
-    
+    <html>
+  <head>
+    <meta charset="UTF-8">
+    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+  </head>
+  <body>
+    <div id ="chartDiv"></div>
+  </body>
+</html>
+        
     <hr>
                 <!-- Pager -->
                 <ul class="pager">
