--- a/interesting.html
+++ b/interesting.html
@@ -94,7 +94,10 @@
         
      <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-15%20at%206.12.27%20PM.png?raw=true" alt="">
-                    </a>  
+                    </a> 
+        <a href="#">
+                        <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-16%20at%205.53.23%20PM.png?raw=true" alt="">
+                    </a> 
         <p></p>
      <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-15%20at%206.12.46%20PM.png?raw=true" alt="">
