Change download links

--- a/slides.html
+++ b/slides.html
@@ -107,24 +107,28 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td>Proposal Presentation </td>
+                <td>2017-05-08</td>
                 <td>
-                  <a href="./img/about-bg.jpg" download> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=1mch_8ci7FuvG_rQ5etp3XbP420sjE4OxU6qqSugAya8"> Download </a>
                 </td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+                <td>Mid Review Presentation </td>
+                <td>2017-05-08</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/open?id=1eC3GLibtrKQOnv-4F6TAx0n2DB1RHdVMyitKzdFXFHM"> Download </a>
+                </td>
               </tr>
               <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-              </tr>
+                  <th scope="row">3</th>
+                  <td>Progress 90% Presentation  </td>
+                  <td>2017-05-08</td>
+                  <td>
+                    <a target="_blank" href="https://drive.google.com/open?id=15hYwxIYl8GIZqMcyLVBhl1XP0hVcRbUjUnDawk-Ak74"> Download </a>
+                  </td>
+                </tr>
             </tbody>
           </table>
 
