Change table template in docs

--- a/documents.html
+++ b/documents.html
@@ -114,10 +114,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+                <td colspan="3" style="font-weight: bold">PPR Documents</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
